# Todo

./: .gitignore  PKGBUILD
pkg/todo-rs/: .BUILDINFO  .MTREE  .PKGINFO
src/: main.rs
src/Todo-0.1.0/: .SRCINFO
src/Todo-0.2.0/pkg/todo-rs/: .BUILDINFO  .PKGINFO
src/Todo-0.2.0/src/Todo-0.1.1/: Cargo.toml
src/Todo-0.2.0/src/Todo-0.1.1/pkg/todo-rs/: .PKGINFO
src/Todo-0.2.0/src/Todo-0.1.1/src/storage/: json.rs
src/Todo-0.3.0/: PKGBUILD
src/Todo-0.3.0/src/Todo-0.2.1/src/Todo-0.1.1/: PKGBUILD
src/Todo-0.3.0/src/Todo-0.2.2/src/Todo-0.2.1/src/Todo-0.2.0/src/: main.rs
src/Todo-0.3.2/pkg/todo-rs/: .BUILDINFO  .PKGINFO
src/Todo-0.3.2/src/Todo-0.2.0/src/commands/: tui.rs
src/Todo-0.3.2/src/Todo-0.2.2/src/Todo-0.2.0/src/Todo-0.1.0/: README.md
src/Todo-0.3.2/src/Todo-0.3.0/pkg/todo-rs/: .PKGINFO
src/Todo-0.3.2/src/Todo-0.3.0/src/Todo-0.2.2/pkg/todo-rs/: .MTREE
src/Todo-0.3.2/src/Todo-0.3.0/src/commands/: done.rs
src/Todo-0.3.2/src/Todo-0.3.0/src/tui/: event.rs
src/Todo-0.3.2/src/Todo-0.3.1/src/Todo-0.3.0/src/Todo-0.2.2/: Cargo.toml
src/Todo-0.3.2/src/Todo-0.3.1/src/Todo-0.3.0/src/Todo-0.2.2/src/Todo-0.2.1/src/Todo-0.2.0/src/commands/: stats.rs
src/Todo-0.4.0/: PKGBUILD
src/Todo-0.4.0/pkg/todo-rs/: .MTREE  .PKGINFO
src/Todo-0.4.0/src/Todo-0.3.1/src/tui/: ui.rs
src/Todo-0.4.0/src/Todo-0.3.2/src/Todo-0.2.2/src/tui/: ui.rs
src/Todo-0.4.0/src/Todo-0.3.2/src/Todo-0.3.1/src/Todo-0.1.0/: LICENSE
src/Todo-0.4.0/src/tui/: app.rs  ui.rs
src/commands/: remove.rs  tui.rs
src/tui/: app.rs  event.rs  ui.rs
(+21 files in other folders)
