[package]
name = "todo"
version = "0.1.0"
edition = "2021"
description = "Terminal To-Do Manager"
authors = ["nezerkill"]

[dependencies]
# CLI парсинг
clap = { version = "4.4", features = ["derive"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Даты
chrono = { version = "0.4", features = ["serde"] }

# Цветной вывод и таблицы
comfy-table = "7.0"
colored = "2.0"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Ошибки
thiserror = "1.0"
anyhow = "1.0"

# UUID для уникальных ID
uuid = { version = "1.0", features = ["v4"] }

# Директории (XDG)
dirs = "5.0"
